
public class Rectangle implements Shape {

    private long width;
    private long length;

    public Rectangle() {
    }

    public Rectangle(long width, long length) {
        this.width = width;
        this.length = length;
    }

    public long getWidth() {
        return width;
    }

    public void setWidth(long width) {
        this.width = width;
    }

    public long getLength() {
        return length;
    }

    public void setLength(long length) {
        this.length = length;
    }

    @Override
    public double area() {
        return this.width * this.length;
    }
}
