classDiagram
    class Shape{
        <<interface>> 
        + area()* double
    }

    class Circle{
        - radius: double

        + Circle()
        + Circle(radius: double)
        + area() double
    }

    class Rectangle{
        - width: double
        - length: double

        + Rectangle()
        + Rectangle(width: double, length: double)
        + area() double
    }

    class Cylinder{
        - radius: double
        - height: double

        + Cylinder()
        + Cylinder(radius: double, height: double)
        + area() double
    }

    Shape <|.. Circle
    Shape <|.. Cylinder
    Shape <|.. Rectangle

